# kong-plugin-soap-xml-handling

./: .env  .gitignore  LOADTEST.md  LOADTESTING.md  README.md  SAXON-.md  SAXON.MD  SAXON.md  docker-compose-3-10.yml  docker-compose-3-11.yml  docker-compose-3-6.yml  docker-compose-3-8.yml  docker-compose-3-9.yml  docker-compose.yml  pongo.sh  start-kong-jeg-image.sh  start-kong.sh
.pongo/: httpbin.yml  pongorc  ws-soap-calculator.yml  ws-soap1-calculator.yml  ws-soap2-calculator.yml
_tmp.dneonline.com/: dneonline.com.multiple-xsd.binding.wsdl  dneonline.com.multiple-xsd.binding_soap1.1_soap1.2.wsdl  dneonline.com.multiple-xsd.wsdl  dneonline.com.request-response-cross-referenced.wsdl  dneonline.com.request-response-no-import.wsdl  dneonline.com.request-response.nested_1.xsd  dneonline.com.request-response.wsdl  dummy.xsd  (+8 more)
kong/saxon/: CMakeLists.txt  Dockerfile  Dockerfile_Kong_Saxon  Dockerfile_Kong_Saxon_InitContainer  Dockerfile_Local_Lib  Makefile  kong-adapter-makefile  kong-adapter.cpp  notes.txt
kong/saxon/conf/: saxonConf.xml
kong/saxon/include/: SaxonCGlue.h  _note.txt
kong/saxon/include/saxonc/: DocumentBuilder.h  SaxonApiException.h  SaxonCGlue.h  SaxonCProcessor.h  SaxonCXPath.h  SaxonProcessor.h  SchemaValidator.h  XPathProcessor.h  XQueryProcessor.h  XdmArray.h  XdmAtomicValue.h  XdmFunctionItem.h  XdmItem.h  XdmMap.h  XdmNode.h  XdmValue.h  Xslt30Processor.h  XsltExecutable.h  saxonc-core.h  saxonc_version.h
kong/saxon/kubernetes/: values-4-Konnect-w-initContainer.yaml  values-4-Konnect.yaml  values.yaml
kong/saxon/zip/: _note.txt
(+293 files in other folders)
